Update Dockerfile to use openjdk:11-jdk (Java 11)